fix scrollbar

--- a/src/scss/common/base.scss
+++ b/src/scss/common/base.scss
@@ -17,10 +17,10 @@ body {
   width: 8px;
 }
 ::-webkit-scrollbar-track {
-  background: darken(rgba(12,20,54), 5);
+  background: rgb(8,14,38);
 }
 ::-webkit-scrollbar-thumb {
-  background: lighten(rgba(12,20,54), 15);
+  background: rgb(12,21,72);
 }
 
 img {
